<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/px_15dp"
    android:gravity="center_horizontal"
    android:layout_marginTop="@dimen/px_25dp"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/ip5_40px"
      android:textColor="@color/common_text_black"
      android:text="@string/app_name"
      android:drawablePadding="@dimen/px_10dp"
      android:drawableLeft="@drawable/icon_home_rectangle"
      android:drawableRight="@drawable/icon_home_rectangle"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/px_15dp"
      android:textColor="@color/common_text_black"
      android:textStyle="bold"
      android:textSize="@dimen/ip5_80px"
      android:text="@string/app_name_hint"
      />

  <View
      android:layout_width="@dimen/px_155dp"
      android:layout_height="@dimen/px_05dp"
      android:layout_marginTop="@dimen/px_25dp"
      android:background="@color/common_line"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/px_15dp"
      android:textColor="@color/common_text_black"
      android:textSize="@dimen/ip5_28px"
      android:text="@string/app_desc_1"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/px_10dp"
      android:textColor="@color/common_text_black"
      android:textSize="@dimen/ip5_28px"
      android:text="@string/app_desc_2"
      />

</LinearLayout>