<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_gray"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/tv_city_current"
      android:layout_width="match_parent"
      android:layout_height="@dimen/px_44dp"
      android:background="@color/common_white"
      android:textSize="@dimen/ip5_28px"
      android:gravity="center_vertical"
      android:paddingLeft="@dimen/px_20dp"
      android:textColor="@color/common_text_gray"
      android:text="@string/city_current_choose"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/px_05dp"
      android:background="@color/common_line"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@color/common_white"
      android:layout_marginTop="@dimen/px_5dp"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_50dp"
        android:textSize="@dimen/ip5_34px"
        android:textColor="@color/common_text_black"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/px_5dp"
        android:paddingLeft="@dimen/px_20dp"
        android:text="@string/city_location_hint"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_05dp"
        android:background="@color/common_line"
        />
    <TextView
        android:id="@+id/tv_location_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_55dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:paddingLeft="@dimen/px_20dp"
        android:textColor="@color/common_yellow"
        android:background="@drawable/common_selector_click"
        android:textSize="@dimen/ip5_34px"
        android:drawablePadding="@dimen/px_5dp"
        android:drawableLeft="@drawable/icon_location_yellow"
        android:text="@string/city_location_fail"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_05dp"
        android:background="@color/common_line"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@color/common_white"
      android:layout_marginTop="@dimen/px_5dp"
      >
    <TextView
        style="@style/bee_filter_item_hint"
        android:text="@string/city_hot_hint"
        />

    <com.haoche51.bee.custom.BeeGridView
        android:id="@+id/gv_city_hot"
        style="@style/bee_filter_gv"
        android:numColumns="3"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_05dp"
        android:background="@color/common_line"
        />
  </LinearLayout>


  <TextView
      android:id="@+id/tv_all_city"
      android:layout_width="match_parent"
      android:layout_height="@dimen/px_55dp"
      android:clickable="true"
      android:gravity="center_vertical"
      android:paddingLeft="@dimen/px_20dp"
      android:text="@string/city_all"
      android:textSize="@dimen/ip5_34px"
      android:layout_marginTop="@dimen/px_5dp"
      android:background="@drawable/common_selector_click"
      android:textColor="@color/common_text_black"
      />
</LinearLayout>