<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_home_top"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px_200dp"
    android:background="@color/common_yellow"
    >
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@drawable/home_top"
      android:scaleType="fitXY"
      android:contentDescription="@null"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginBottom="@dimen/px_20dp"
      android:gravity="center_horizontal"
      >
    <TextView
        android:id="@+id/tv_home_top_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/ip5_24px"
        android:textColor="@color/common_text_black"
        android:text="@string/city_all"
        />
    <TextView
        android:id="@+id/tv_home_top_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/px_5dp"
        android:layout_marginBottom="@dimen/px_m1"
        android:layout_toRightOf="@id/tv_home_top_city"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/ip5_28px"
        android:textColor="@color/common_text_black"
        android:text="@string/home_count"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_5dp"
        android:layout_toRightOf="@id/tv_home_top_count"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/ip5_24px"
        android:textColor="@color/common_text_black"
        android:text="@string/home_count_hint"
        />
  </RelativeLayout>
</FrameLayout>
