<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_single_pic_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/px_15dp"
    android:layout_marginLeft="@dimen/px_15dp"
    android:layout_marginTop="@dimen/px_15dp"
    android:layout_marginBottom="@dimen/px_10dp"
    android:background="@color/common_white"
    >

  <FrameLayout
      android:id="@+id/layout_single_pic_vehicle_image"
      android:layout_width="@dimen/px_120dp"
      android:layout_height="@dimen/px_80dp"
      android:layout_alignParentLeft="true"
      >
    <ImageView
        android:id="@+id/iv_single_pic_vehicle_image"
        android:layout_width="@dimen/px_120dp"
        android:layout_height="@dimen/px_80dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        />
  </FrameLayout>

  <FrameLayout
      android:layout_alignBottom="@id/layout_single_pic_vehicle_image"
      android:layout_alignTop="@id/layout_single_pic_vehicle_image"
      android:layout_marginLeft="@dimen/px_10dp"
      android:layout_toRightOf="@id/layout_single_pic_vehicle_image"
      android:layout_height="@dimen/px_80dp"
      android:layout_width="match_parent"
      >

    <RelativeLayout
        android:layout_height="@dimen/px_80dp"
        android:layout_width="match_parent"
        >

      <!-- 名字 -->
      <TextView
          android:layout_marginTop="@dimen/px_m05"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:maxLines="2"
          android:ellipsize="end"
          android:id="@+id/tv_single_pic_vehicle_name"
          android:layout_alignParentTop="true"
          android:textColor="@color/common_text_black"
          android:textSize="@dimen/ip5_32px"
          android:includeFontPadding="false"
          />

      <!-- 上牌时间和行驶里程 -->
      <TextView
          android:id="@+id/tv_single_pic_vehicle_detail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:maxLines="1"
          android:layout_below="@id/tv_single_pic_vehicle_name"
          android:layout_marginTop="@dimen/px_6dp"
          android:textColor="@color/common_text_gray"
          android:textSize="@dimen/ip5_24px"
          android:includeFontPadding="false"
          />

      <!-- 售价 -->
      <TextView
          android:id="@+id/tv_single_pic_vehicle_price"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_marginBottom="@dimen/px_m3"
          android:layout_alignParentLeft="true"
          android:textColor="@color/common_yellow"
          android:textSize="@dimen/ip5_34px"
          android:includeFontPadding="false"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_toRightOf="@id/tv_single_pic_vehicle_price"
          android:layout_alignParentBottom="true"
          android:orientation="horizontal"
          >
        <TextView
            android:id="@+id/tv_single_pic_vehicle_price_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_yellow"
            android:textSize="@dimen/ip5_24px"
            android:layout_marginBottom="@dimen/px_m1"
            android:text="@string/vehicle_list_price"
            android:includeFontPadding="false"
            />

        <TextView
            android:id="@+id/tv_single_pic_vehicle_cut_price"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_12dp"
            android:textColor="@color/common_white"
            android:background="@drawable/icon_cut_price"
            android:gravity="center_vertical"
            android:textSize="@dimen/ip5_20px"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/px_5dp"
            android:paddingRight="@dimen/px_5dp"
            android:text="@string/vehicle_list_cut_price"
            android:includeFontPadding="false"
            />
      </LinearLayout>
    </RelativeLayout>
  </FrameLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/layout_single_pic_vehicle_image"
      android:layout_toRightOf="@id/layout_single_pic_vehicle_image"
      android:layout_marginTop="@dimen/px_10dp"
      android:layout_marginLeft="@dimen/px_10dp"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/tv_single_pic_vehicle_platform_one"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_17dp"
        android:background="@drawable/common_bg_gray"
        android:textColor="@color/common_text_gray"
        android:textSize="@dimen/ip5_20px"
        android:text="@string/platform_choose"
        android:paddingRight="@dimen/px_5dp"
        android:paddingLeft="@dimen/px_5dp"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/tv_single_pic_vehicle_platform_two"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_17dp"
        android:background="@drawable/common_bg_gray"
        android:textColor="@color/common_text_gray"
        android:textSize="@dimen/ip5_20px"
        android:text="@string/platform_choose"
        android:paddingRight="@dimen/px_5dp"
        android:visibility="gone"
        android:paddingLeft="@dimen/px_5dp"
        android:layout_marginLeft="@dimen/px_5dp"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/tv_single_pic_vehicle_platform_three"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_17dp"
        android:background="@drawable/common_bg_gray"
        android:textColor="@color/common_text_gray"
        android:textSize="@dimen/ip5_20px"
        android:text="@string/platform_choose"
        android:paddingRight="@dimen/px_5dp"
        android:paddingLeft="@dimen/px_5dp"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/px_5dp"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/tv_single_pic_vehicle_platform_all"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_17dp"
        android:background="@drawable/common_bg_gray"
        android:textColor="@color/common_text_gray"
        android:textSize="@dimen/ip5_20px"
        android:text="@string/and_so_on"
        android:paddingRight="@dimen/px_5dp"
        android:paddingLeft="@dimen/px_5dp"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/px_5dp"
        android:gravity="center_vertical"
        />
  </LinearLayout>

  <ImageView
      android:id="@+id/iv_single_pic_vehicle_sold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@null"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      android:layout_marginRight="@dimen/px_20dp"
      android:layout_marginBottom="@dimen/px_20dp"
      android:src="@drawable/icon_sold"
      android:visibility="gone"
      />
</RelativeLayout>
